Переделываем fieldset в div на странице form.html

--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -74,7 +74,7 @@
   display: block;
   .wrapper(@mobile-width);
 
-  padding-bottom: 18px;
+  padding-bottom: 12px;
 
   border: none;
 }
@@ -121,7 +121,7 @@
 
   .contest__contestant {
     margin: 0;
-    padding: 0 0 50px 0;
+    padding: 0 0 60px 0;
     order: 0;
 
     display: flex;
@@ -132,6 +132,7 @@
   }
 
   .contest__apps {
+    margin-bottom: 10px;
     padding: 20px 58px 20px 58px;
     border: 2px solid @bg-gray-dark;
   }
@@ -141,20 +142,21 @@
   }
 
   .contest__achievement {
-    margin-bottom: 55px;
+    margin-top: 66px;
     padding: 20px 58px 12px 58px;
     border: 2px solid @bg-gray-dark;
   }
 
   .contest__contact {
     margin-top: 60px;
-    padding: 0 60px 70px 60px;
+    padding: 0 60px 10px 60px;
     order: 2;
+    border: 2px solid @bg-gray-dark;
   }
 
   .contest__comment {
+    margin-top: 66px;
     padding: 40px 60px 10px 60px;
-    margin: 0;
     order: 4;
 
     border: 2px solid @bg-gray-dark;
@@ -205,7 +207,7 @@
   .contest__contact {
     flex-basis: 100%;
 
-    margin-top: 0;
+    margin-top: 10px;
     margin-bottom: 54px;
     padding-bottom: 0;
     border: 2px solid @bg-gray-dark;
@@ -217,6 +219,7 @@
   }
 
   .contest__apps {
+    margin-top: 10px;
     padding: 18px 0 22px 0;
   }
 
@@ -225,11 +228,13 @@
   }
 
   .contest__achievement {
+    margin-top: 10px;
     margin-bottom: 55px;
     padding: 20px 0 20px 58px;
   }
 
   .contest__comment {
+    margin-top: 8px;
     flex-basis: 100%;
     padding-top: 35px;
     padding-bottom: 0;
