Исправление центровки для заголовков блоков формы

--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -134,6 +134,8 @@
   .contest__apps {
     margin-bottom: 10px;
     padding: 20px 58px 20px 58px;
+    display: flex;
+    flex-direction: column;
     border: 2px solid @bg-gray-dark;
   }
 
@@ -142,12 +144,16 @@
   }
 
   .contest__achievement {
+    display: flex;
+    flex-direction: column;
     margin-top: 66px;
     padding: 20px 58px 12px 58px;
     border: 2px solid @bg-gray-dark;
   }
 
   .contest__contact {
+    display: flex;
+    flex-direction: column;
     margin-top: 60px;
     padding: 0 60px 10px 60px;
     order: 2;
@@ -155,6 +161,8 @@
   }
 
   .contest__comment {
+    display: flex;
+    flex-direction: column;
     margin-top: 66px;
     padding: 40px 60px 10px 60px;
     order: 4;
