--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,4 @@
 .main-nav {
-  padding-top: 5px;
   font-size: 18px;
   line-height: 32px;
   font-weight: bold;
@@ -17,8 +16,6 @@
 }
 
 .main-nav__item {
-  // margin-bottom: 2px;
-
   text-align: center;
 
   border-bottom: 1px solid @black;
@@ -28,9 +25,18 @@
 
 .main-nav__link {
   display: block;
-  padding: 15px 15px 16px 15px;
+  padding: 16px 16px 15px 15px;
 
   color: @white;
+}
+
+.main-nav__link[href]:hover,
+.main-nav__link[href]:focus {
+  color: @text-blood;
+}
+
+.main-nav__link[href]:active {
+  color: fade(@text-blood, 30);
 }
 
 @media (min-width: @tablet-width) {
@@ -44,7 +50,7 @@
 }
 
 @media (min-width: @desktop-width) {
-  .main-nav__wrapper--desktop {
+  .main-nav__wrapper {
     .wrapper-reset();
   }
 
@@ -65,9 +71,25 @@
 
   .main-nav__item {
     display: block;
-    padding-left: 85px;
+    padding-left: 82px;
 
     border-bottom: 1px solid transparent;
     box-shadow: inset 0 1px 0 0 transparent;
+  }
+
+  .main-nav__link {
+    position: relative;
+    letter-spacing: 0.3px;
+
+    &--active::before {
+      content: "";
+      position: absolute;
+      bottom: -10px;
+      left: 0;
+      width: 100%;
+      height: 2px;
+
+      background-color: @white;
+    }
   }
 }
