--- a/source/less/blocks/page-content.less
+++ b/source/less/blocks/page-content.less
@@ -10,9 +10,19 @@
   background-color: @white;
 }
 
-.page-content__rates {
-  padding: 70px 0 50px 0;
+.page-content__features {
+  padding-top: 22px;
 }
+
+.page-content__reviews {
+  padding-top: 25px;
+  padding-bottom: 18px;
+}
+
+.page-content__rates {
+  padding: 74px 0 46px 0;
+}
+
 
 @media (min-width: @tablet-width) {
   .page-content__effect {
@@ -28,7 +38,7 @@
 @media (min-width: @desktop-width) {
   .page-content__effect {
     background-color: @bg-gray;
-    padding-top: 40px;
+    padding-top: 10px;
     padding-bottom: 70px;
   }
 
