--- a/source/less/style.less
+++ b/source/less/style.less
@@ -21,8 +21,8 @@
 @import "blocks/contact.less";
 @import "blocks/footer.less";
 @import "blocks/social.less";
-@import "blocks/map.less";
 @import "blocks/page-footer.less";
+@import "blocks/copyright.less";
 // photo.html
 @import "blocks/photos.less";
 @import "blocks/photo-blog.less";
