--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -1,5 +1,5 @@
 .contact {
-  margin-bottom: 18px;
+  padding-bottom: 22px;
 }
 
 .contact__title {
@@ -7,7 +7,7 @@
 
   font-size: 18px;
   font-weight: bold;
-  line-height: 30px;
+  line-height: 28px;
   text-align: center;
   color: @bg-darkblue;
 }
@@ -18,15 +18,31 @@
 
   font-size: 24px;
   font-weight: lighter;
-  line-height: 30px;
+  line-height: 28px;
   text-align: center;
   color: @text-blood;
+
+  &--email:hover,
+  &--email:focus {
+    text-decoration: underline;
+    color: @bg-darkblue;
+  }
+
+  &--email:active {
+    text-decoration: underline;
+    color: fade(@bg-darkblue, 30);
+  }
 }
 
 @media (min-width: @tablet-width) {
   .contact {
-    width: 240px;
+    width: 280px;
     margin: 5px 0 40px 0;
+    padding-bottom: 0;
+  }
+
+  .contact__title {
+    padding: 0 10px 2px 10px;
   }
 }
 
