--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,7 +3,7 @@
 }
 
 .contacts__title {
-  margin: 40px 0 30px 0;
+  margin: 42px 0 30px 0;
 
   font-size: 24px;
   font-weight: lighter;
@@ -14,33 +14,52 @@
 
 .contacts__map {
   position: relative;
-  height: 210px;
+  height: 200px;
 
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   top: -1px;
-  //   z-index: 1;
+  background-color: @bg-gray-dark;
+  overflow: hidden;
 
-  //   display: block;
-  //   width: 100%;
-  //   height: 60px;
+  &::before {
+    content: "";
+    position: absolute;
+    top: -1px;
+    z-index: 1;
 
-  //   background-image: url('../../img/bg-triangle-white-footer.svg');
-  //   .background();
-  //   // border-right: 50vw solid transparent;
-  //   // border-top: 35px solid #fff;
-  //   // border-left: 50vw solid transparent;
-  // }
+    display: block;
+    width: 100%;
+    height: 40px;
+
+    border-right: 50vw solid transparent;
+    border-top: 35px solid @white;
+    border-left: 50vw solid transparent;
+    border-bottom-style: none;
+  }
+}
+
+.contacts__map-picture {
+  position: absolute;
+  bottom: -3px;
+  left: auto;
+  right: auto;
+
+  width: 100%;
+  height: auto;
+}
+
+.contacts__map-image {
+  display: block;
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .contacts__info {
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 @media (min-width: @tablet-width) {
   .contacts__wrapper {
-    .wrapper(@tablet-width);
+    .wrapper(@tablet-width; 10px);
   }
 
   .contacts__info {
@@ -55,12 +74,19 @@
     line-height: 50px;
     margin-top: 42px;
     margin-bottom: 35px;
-    padding: 0 30px;
+    padding: 0 40px;
   }
 
   .contacts__map {
-    height: 370px;
-    // border-top: 35px solid #fff;
+    height: 365px;
+
+    &::before {
+      border-top: 60px solid #fff;
+    }
+  }
+
+  .contacts__info {
+    justify-content: space-around;
   }
 }
 
@@ -83,6 +109,9 @@
 
   .contacts__map {
     height: 480px;
-    // border-top: 35px solid #fff;
+
+    &::before {
+      border-top: 90px solid #fff;
+    }
   }
 }
