--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,5 +1,4 @@
 .features {
-  padding-top: 27px;
   overflow: hidden;
 }
 
@@ -8,7 +7,7 @@
 }
 
 .features__wrapper-tablet {
-  padding-bottom: 280px;
+  padding-bottom: 283px;
 
   &::after {
     content: "";
@@ -42,8 +41,8 @@
     width: 100%;
     height: 100%;
 
-    background-image: url("../img/bg-triangle-white.svg");
-    .background(0%, 0%, contain);
+    border-top: 10vw solid @white;
+	  border-right: 100vw solid transparent;
   }
 }
 
@@ -134,7 +133,7 @@
   .features__list {
     flex-basis: 50%;
     padding-top: 65px;
-    padding-bottom: 5px;
+    padding-bottom: 30px;
     order: 2;
     margin: 0;
     margin-left: auto;
@@ -143,7 +142,7 @@
 
 @media (min-width: @desktop-width) {
   .features {
-    padding-top: 70px;
+    padding-top: 65px;
   }
 
   .features__wrapper {
@@ -172,6 +171,7 @@
   .features__list {
     flex-basis: 100%;
     margin: 0;
+    padding-top: 42px;
 
     display: flex;
     flex-wrap: wrap;
