--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -7,7 +7,11 @@
 }
 
 @media (min-width: @tablet-width) {
-  .page-footer--hide {
-    display: block;
+  .page-footer {
+    padding-top: 5px;
+
+    &--hide {
+      display: block;
+    }
   }
 }
