--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -18,27 +18,107 @@
 
 .page-header__wrapper {
   .wrapper(@mobile-width);
+  border-bottom: 1px solid @black;
 }
 
 .page-header__hamburger {
   position: absolute;
-  top: calc(50% - 12px);
-  right: 20px;
-  width: 50px;
-  height: 24px;
-  .button-reset();
-  background-image: url("../img/icon-menu-burger.svg");
-  .background();
+  top: calc(50% - 25px);
+  right: 17px;
+  z-index: 2;
+  display: block;
+  width: 70px;
+  height: 50px;
+  background: none;
+  cursor: pointer;
+  border: none;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 14px;
+    left: 17px;
+    width: 50px;
+    height: 4px;
+    background-color: @white;
+    box-shadow: 0 10px 0 0 @white, 0 20px 0 0 @white;
+  }
+
+  &:hover:before,
+  &:focus:before {
+    background-color: @text-blood;
+    box-shadow: 0 10px 0 0 @text-blood, 0 20px 0 0 @text-blood;
+  }
+
+  &:active:before {
+    background-color: fade(@text-blood, 30);
+    box-shadow: 0 10px 0 0 fade(@text-blood, 30), 0 20px 0 0 fade(@text-blood, 30);
+  }
 
   &--open {
-    width: 23px;
-    background-image: url("../img/icon-menu-cross.svg");
+    &:before {
+      top: 25px;
+      left: 40px;
+      width: 30px;
+      transform: rotate(-45deg);
+      background-color: @white;
+      box-shadow: none;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 25px;
+      left: 40px;
+      width: 30px;
+      height: 4px;
+      transform: rotate(45deg);
+      background-color: @white;
+    }
+
+    &:hover:before,
+    &:hover:after,
+    &:focus:before,
+    &:focus:after {
+      background-color: @text-blood;
+      box-shadow: none;
+    }
+
+    &:active:before,
+    &:active:after {
+      background-color: fade(@text-blood, 30);
+      box-shadow: none;
+    }
   }
 }
 
 .page-header__logo {
-  padding: 20px 20px 16px 0;
+  padding: 20px 20px 20px 0;
   .link-reset();
+}
+
+.logo-pink {
+  fill: @white;
+  margin: -15px 0 0 -70px;
+}
+
+.logo-pink-desktop {
+  fill: @text-blood;
+}
+
+.page-header__logo:hover .logo-pink,
+.page-header__logo:focus .logo-pink {
+  fill: @text-blood;
+}
+
+.page-header__logo:active .logo-pink {
+  fill: fade(@white, 30);
+}
+
+.logo-pink-desktop-glass,
+.logo-pink-desktop,
+.logo-pink-tablet {
+  display: none;
 }
 
 .page-header__navigation {
@@ -50,6 +130,15 @@
 }
 
 @media (min-width: @tablet-width) {
+  .logo-pink {
+    fill: @white;
+    margin: 0;
+  }
+
+  .logo-pink-tablet {
+    display: block;
+  }
+
   .page-header {
     background-image: url("../img/bg-back-tablet@1x.jpg");
   }
@@ -59,11 +148,20 @@
   }
 
   .page-header__logo {
-    padding: 28px 20px 33px 0;
+    padding: 28px 20px 38px 0;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .logo-pink-tablet {
+    display: none;
+  }
+
+  .logo-pink-desktop,
+  .logo-pink-desktop-glass {
+    display: block;
+  }
+
   .page-header {
     background-image: url("../img/bg-back-desktop@1x.jpg");
   }
@@ -86,7 +184,7 @@
   }
 
   .page-header__logo {
-    padding: 28px 20px 33px 0;
+    padding: 28px 20px 35px 0;
   }
 
   .page-header__hamburger {
