--- a/source/less/blocks/page-content.less
+++ b/source/less/blocks/page-content.less
@@ -1,5 +1,7 @@
 .page-content__reviews {
   background-color: @white;
+  padding-top: 25px;
+  padding-bottom: 18px;
 }
 
 .page-content__effect {
@@ -14,15 +16,13 @@
   padding-top: 22px;
 }
 
-.page-content__reviews {
-  padding-top: 25px;
-  padding-bottom: 18px;
-}
-
 .page-content__rates {
   padding: 74px 0 46px 0;
 }
 
+.page-content__photos {
+  margin-bottom: 40px;
+}
 
 @media (min-width: @tablet-width) {
   .page-content__effect {
@@ -32,6 +32,10 @@
   .page-content__rates {
     padding-top: 68px;
     padding-bottom: 40px;
+  }
+
+  .page-content__photos {
+    margin-bottom: 45px;
   }
 }
 
@@ -47,7 +51,11 @@
     padding-bottom: 70px;
   }
 
+  .page-content__photos {
+    margin-bottom: 0;
+  }
+
   .page-content__photo-uploads {
-    margin-bottom: 65px;
+    margin-bottom: 25px;
   }
 }
