--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -23,7 +23,7 @@
 
 .page-header__hamburger {
   position: absolute;
-  top: calc(50% - 25px);
+  top: calc(50% - 30px);
   right: 17px;
   z-index: 2;
   display: block;
@@ -149,6 +149,10 @@
 
   .page-header__logo {
     padding: 28px 20px 38px 0;
+  }
+
+  .page-header__hamburger {
+    top: calc(50% - 25px);
   }
 }
 
