--- a/source/less/blocks/range.less
+++ b/source/less/blocks/range.less
@@ -1,7 +1,7 @@
 .range__controls {
   position: relative;
 
-  padding: 35px 23px 40px 18px;
+  padding: 20px 23px 35px 18px;
 
   border-radius: 5px;
 
@@ -15,11 +15,11 @@
 
 .range__runner {
   position: absolute;
-  top: calc(50% - 10px);
+  top: calc(50% - 15px);
   left: 0;
 
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   padding: 0;
 
   border: 2px solid @text-blood;
@@ -44,11 +44,15 @@
   .range__controls {
     width: 205px;
 
-    padding: 18px 0 35px 28px;
+    padding: 20px 0 33px 28px;
   }
 
   .range__runner {
-    top: 11px;
+    top: 14px;
+  }
+
+  .range--active .range__runner {
+    background-color: @text-blood;
   }
 }
 
