--- a/source/less/blocks/filters.less
+++ b/source/less/blocks/filters.less
@@ -1,7 +1,6 @@
 .filters {
   width: 100%;
   margin: 0;
-  padding: 35px 0 0 0;
 
   box-sizing: border-box;
 }
@@ -9,30 +8,34 @@
 .filters__toggles {
   position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  padding: 0 20px;
 }
 
 .filters__toggle {
   width: 50px;
   height: 50px;
 
-  padding: 0 20px;
-  margin: 0 15px;
+  padding: 0;
+  margin: 0;
 
   .button-reset();
-  .background(50%, 50%, auto);
+}
 
-  &--crop {
-    background-image: url("../img/icon-editor-crop.svg");
-  }
+.filters__icon {
+  fill: fade(@bg-darkblue, 30);
+}
 
-  &--fill {
-    background-image: url("../img/icon-editor-fill.svg");
-  }
+.filters__toggle:hover .filters__icon,
+.filters__toggle:focus .filters__icon {
+  fill: fade(@bg-darkblue, 60);
+}
 
-  &--contrast {
-    background-image: url("../img/icon-editor-contrast.svg");
-  }
+.filters__toggle:active .filters__icon,
+.filters__toggle--active .filters__icon,
+.filters__toggle--active:hover .filters__icon,
+.filters__toggle--active:focus .filters__icon {
+  fill: @text-blood;
 }
 
 .filters__range {
@@ -41,18 +44,18 @@
 
 .filters__item {
   padding-bottom: 70px;
-}
 
-.filters__item::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: calc(50% - 50vw);
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: calc(50% - 50vw);
 
-  width: 100vw;
-  max-width: @desktop-width;
+    width: 100vw;
+    max-width: @desktop-width;
 
-  border-bottom: 1px solid @uploads-border;
+    border-bottom: 1px solid @uploads-border;
+  }
 }
 
 .filters__item--active .filters__range {
@@ -76,36 +79,38 @@
 
   .filters__toggles {
     flex-direction: column;
+    padding: 0;
+    margin: 0;
   }
 
   .filters__item {
     position: relative;
     display: flex;
-    // align-items: center;
     justify-content: flex-start;
     padding: 0;
     margin-bottom: 17px;
   }
 
   .filters__toggle {
+    position: relative;
     width: 30px;
     height: auto;
     margin: 0;
     padding: 0;
+  }
 
-    &--crop {
-      background-position: 2px 6px;
-      background-size: 27px;
-    }
-
-    &--fill {
-      background-position: 2px 8px;
-      background-size: 27px;
-    }
+  .filters__icon {
+    position: absolute;
+    top: 8px;
+    left: 0;
+    width: 25px;
+    height: 25px;
 
     &--contrast {
-      background-position: 8px 9px;
-      background-size: 18px;
+      top: 10px;
+      left: 6px;
+      width: 18px;
+      height: 18px;
     }
   }
 
@@ -122,24 +127,32 @@
   }
 
   .filters__toggle {
+    position: relative;
+    width: 45px;
+    height: auto;
+    margin: 0;
+    padding: 0;
+  }
+
+  .filters__icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 45px;
+    height: 45px;
+
+    &--contrast {
+      top: 2px;
+      left: 5px;
+      width: 35px;
+      height: 35px;
+    }
+  }
+
+  .filters__toggle {
     width: 50px;
     height: auto;
     margin: 0;
     padding: 0 65px 0 0;
-
-    &--crop {
-      background-position: 0 0;
-      background-size: 50px;
-    }
-
-    &--fill {
-      background-position: 0 0;
-      background-size: 50px;
-    }
-
-    &--contrast {
-      background-position: 4px 4px;
-      background-size: 35px;
-    }
   }
 }
