--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -34,7 +34,7 @@
 .intro__title {
   width: 100%;
   margin: 0;
-  padding: 30px 0 0 0;
+  padding: 28px 0 0 0;
 
   font-size: 24px;
   font-weight: lighter;
@@ -135,14 +135,22 @@
     }
   }
 
-  .intro__title:not(.intro__title--front-page) {
-    width: 800px;
+  .intro__title {
     margin: 0 auto;
+    padding-top: 65px;
+
+    &--photo {
+      width: 600px;
+    }
   }
 
   .intro__title--front-page {
     font-size: 50px;
     line-height: 60px;
+    width: 300px;
+    margin: 0 auto 0 0;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .intro__apps {
