--- a/source/less/blocks/photo-blog.less
+++ b/source/less/blocks/photo-blog.less
@@ -1,7 +1,11 @@
 .photo-blog {
-  margin-bottom: 20px;
+  margin-bottom: 21px;
   display: flex;
   flex-direction: column;
+
+  &--special {
+    margin-bottom: 20px;
+  }
 }
 
 .photo-blog__link {
@@ -45,7 +49,7 @@
 
 .photo-blog__content {
   min-height: 120px;
-  padding: 16px 16px 18px 16px;
+  padding: 17px 16px 16px 16px;
   background-color: @bg-gray;
 }
 
@@ -63,7 +67,10 @@
 
 .photo-blog__comment {
   margin: 0;
+  padding-bottom: 10px;
   font-size: 14px;
+
+  letter-spacing: 0.4px;
 }
 
 .photo-blog__likes {
@@ -74,15 +81,8 @@
   .photo-blog {
     width: 300px;
 
-    margin-right: 20px;
-
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-
     &--special {
       width: 100%;
-      margin-right: 0;
     }
   }
 
@@ -91,7 +91,7 @@
   }
 
   .photo-blog__of-day {
-    top: 55px;
+    top: 57px;
   }
 
   .photo-blog__author {
@@ -99,7 +99,7 @@
   }
 
   .photo-blog__content {
-    padding: 23px 26px 25px 26px;
+    padding: 23px 26px 23px 26px;
     flex-grow: 1;
 
     display: flex;
@@ -110,7 +110,7 @@
   }
 
   .photo-blog--special .photo-blog__content {
-    margin-bottom: 33px;
+    margin-bottom: 30px;
     flex-direction: row;
   }
 
@@ -119,7 +119,7 @@
   }
 
   .photo-blog--special .photo-blog__image {
-    min-height: 506px;
+    min-height: 510px;
   }
 
   .photo-blog:not(.photo-blog--special) .photo-blog__likes {
@@ -134,6 +134,7 @@
   .photo-blog--special .photo-blog__comment {
     order: 3;
     flex-basis: 100%;
+    padding: 0;
 
     letter-spacing: 0.3px;
   }
@@ -144,6 +145,14 @@
 }
 
 @media (min-width: @desktop-width) {
+  .photo-blog {
+    margin: 21px 0 35px 0;
+
+    &--special {
+      margin: 0;
+    }
+  }
+
   .photo-blog__link {
     width: 100%;
     max-width: 1200px;
@@ -153,31 +162,20 @@
     .wrapper(@desktop-width, 10px);
   }
 
-  .photo-blog {
-    margin: 20px 20px 35px 0;
-
-    &:nth-child(2n) {
-      margin-right: 20px;
-    }
-
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
-
-    &--special {
-      margin: 0 0 0 0;
-    }
-  }
-
   .photo-blog__image {
     height: 400px;
   }
 
   .photo-blog__of-day {
+    top: 53px;
     right: 130px;
   }
 
   .photo-blog--special .photo-blog__content {
     min-height: auto;
+  }
+
+  .photo-blog--special .photo-blog__image {
+    min-height: 505px;
   }
 }
