--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -8,6 +8,7 @@
 @black: #000000;
 @white: #ffffff;
 @wood-green: #2aab6d;
+@wood-green-hover: #1c9b5e;
 
 @mobile-width: 320px;
 @tablet-width: 660px;
