Исправление ошибок Travis

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -81,12 +81,8 @@
     height: 365px;
 
     &::before {
-      border-top: 60px solid #fff;
+      border-top: 60px solid @white;
     }
-  }
-
-  .contacts__info {
-    justify-content: space-around;
   }
 }
 
@@ -111,7 +107,7 @@
     height: 480px;
 
     &::before {
-      border-top: 90px solid #fff;
+      border-top: 90px solid @white;
     }
   }
 }
