--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -250,7 +250,7 @@
 
   .contest__send-form {
     .wrapper(@desktop-width);
-    padding: 65px 10px 0px 10px;
+    padding: 65px 10px 0 10px;
     order: 10;
 
     display: flex;
