--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -6,7 +6,7 @@
   margin: 42px 0 30px 0;
 
   font-size: 24px;
-  font-weight: lighter;
+  font-weight: 300;
   line-height: 30px;
   text-align: center;
   color: @bg-darkblue;
