--- a/source/less/blocks/effect.less
+++ b/source/less/blocks/effect.less
@@ -40,7 +40,7 @@
   margin-left: 18px;
   padding: 10px;
 
-  font-weight: bold;
+  font-weight: 700;
   font-size: 96px;
   line-height: 144px;
   color: @text-blood;
@@ -56,7 +56,7 @@
 .effect__title {
   width: 200px;
   margin: 35px 0 0 0;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   color: @black;
@@ -130,7 +130,7 @@
     margin-left: 23px;
     padding: 10px;
 
-    font-weight: bold;
+    font-weight: 700;
     font-size: 120px;
     line-height: 186px;
     color: @text-blood;
