--- a/source/less/blocks/feature.less
+++ b/source/less/blocks/feature.less
@@ -73,7 +73,7 @@
   }
 
   .feature__title {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 30px;
     line-height: 30px;
     margin-top: 60px;
@@ -81,7 +81,7 @@
   }
 
   .feature__info {
-    font-weight: normal;
+    font-weight: 400;
     font-size: 18px;
     line-height: 30px;
 
