--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -66,7 +66,7 @@
 
   font-size: 24px;
   line-height: 28px;
-  font-weight: lighter;
+  font-weight: 300;
   text-align: center;
   color: @bg-darkblue;
 }
