--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -37,7 +37,7 @@
   padding: 28px 0 0 0;
 
   font-size: 24px;
-  font-weight: lighter;
+  font-weight: 300;
   line-height: 30px;
   color: @white;
   text-align: center;
@@ -94,7 +94,7 @@
       padding-left: 30px;
       padding-right: 30px;
       font-size: 40px;
-      font-weight: lighter;
+      font-weight: 300;
       line-height: 48px;
     }
   }
