--- a/source/less/blocks/photo-blog.less
+++ b/source/less/blocks/photo-blog.less
@@ -39,7 +39,7 @@
   padding: 4px 20px 7px 20px;
 
   font-size: 12px;
-  font-weight: bold;
+  font-weight: 700;
   text-transform: uppercase;
   text-align: center;
   color: @white;
@@ -56,12 +56,12 @@
 .photo-blog__author {
   font-size: 14px;
   margin: 0;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .photo-blog__date {
   font-size: 12px;
-  font-weight: lighter;
+  font-weight: 300;
   text-transform: uppercase;
 }
 
