--- a/source/less/blocks/rate.less
+++ b/source/less/blocks/rate.less
@@ -6,7 +6,7 @@
 
   font-size: 18px;
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 700;
   text-transform: uppercase;
   color: @white;
 
@@ -20,7 +20,7 @@
 
 .rate__price {
   display: block;
-  font-weight: lighter;
+  font-weight: 300;
   font-size: 24px;
   line-height: 30px;
 }
@@ -34,7 +34,7 @@
   width: 74px;
   height: 73px;
 
-  font-weight: normal;
+  font-weight: 400;
   text-transform: uppercase;
 
   transform: rotate(-45deg);
