--- a/source/less/blocks/apps.less
+++ b/source/less/blocks/apps.less
@@ -12,7 +12,7 @@
 }
 
 .apps__info {
-  font-weight: lighter;
+  font-weight: 300;
   text-align: center;
   color: @white;
   font-size: 14px;
@@ -34,7 +34,7 @@
   width: 100%;
   color: @white;
   padding: 11px 20px 14px 20px;
-  font-weight: bold;
+  font-weight: 700;
   border-color: @white;
   display: block;
   outline: none;
