--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -6,7 +6,7 @@
   margin: 0;
 
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 28px;
   text-align: center;
   color: @bg-darkblue;
@@ -17,7 +17,7 @@
   margin: 0;
 
   font-size: 24px;
-  font-weight: lighter;
+  font-weight: 300;
   line-height: 28px;
   text-align: center;
   color: @text-blood;
