--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -181,7 +181,7 @@
   width: 100%;
   padding: 20px;
 
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
   text-transform: uppercase;
   color: @white;
