--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,7 +1,7 @@
 .main-nav {
   font-size: 18px;
   line-height: 32px;
-  font-weight: bold;
+  font-weight: 700;
   text-transform: uppercase;
 
   background-color: @bg-darkblue;
