--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -6,7 +6,7 @@
 .review__author {
   font-size: 18px;
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 700;
 
   margin-bottom: 0;
 }
@@ -76,7 +76,7 @@
   .review__author {
     margin-top: 20px;
 
-    font-weight: bold;
+    font-weight: 700;
     font-size: 24px;
     line-height: 30px;
 
