--- a/source/less/blocks/uploads.less
+++ b/source/less/blocks/uploads.less
@@ -60,7 +60,7 @@
 .uploads__button {
   width: 100%;
   padding: 13px 12px 15px 12px;
-  font-weight: bold;
+  font-weight: 700;
 
   &--post {
     margin-bottom: 12px;
