--- a/source/less/general.less
+++ b/source/less/general.less
@@ -2,7 +2,7 @@
   font-family: "Open Sans";
   src: url("../fonts/opensans.woff") format("woff"),
     url("../fonts/opensans.woff2") format("woff2");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -10,7 +10,7 @@
   font-family: "Open Sans";
   src: url("../fonts/opensansbold.woff") format("woff"),
     url("../fonts/opensansbold.woff2") format("woff2");
-  font-weight: bold;
+  font-weight: 700;
   font-style: normal;
 }
 
@@ -18,7 +18,7 @@
   font-family: "Open Sans";
   src: url("../fonts/opensanslight.woff") format("woff"),
     url("../fonts/opensanslight.woff2") format("woff2");
-  font-weight: lighter;
+  font-weight: 300;
   font-style: normal;
 }
 
